fix getFirst() compatibility for older Java versions in Tests